# vectorworks-plugin-native-template

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .editorconfig-checker.json  .gitignore  .yamllint.yaml  CMakeLists.txt  PSScriptAnalyzerSettings.psd1  README.md  codecov.yml
.github/: dependabot.yml
.github/workflows/: build.yml  cleanup-dev-release.yml  codeql.yml  coverage.yml  lint.yml  stable-release-healthcheck.yml  test.yml
resources/HelloVW.vwr/Strings/: HelloVW.vwstrings
resources/HelloVWDev.vwr/Strings/: HelloVWDev.vwstrings
resources/SamplePlugin.vwr/Strings/: SamplePlugin.vwstrings
resources/SamplePluginDev.vwr/Strings/: SamplePluginDev.vwstrings
scripts/: lint.sh  vw-update.ps1  vw-update.sh
src/: BuildConfig.h  Module-Info.plist  Module-Info.plist.in  ModuleMain.cpp  PluginPrefix.h  Updater.cpp  Updater.h  UpdaterFlow.cpp  UpdaterHost.h  UpdaterParse.h
src/Extensions/: ExtMenu.cpp  ExtMenu.h
tests/: CMakeLists.txt  README.md  TestFramework.h  UpdaterFlowTests.cpp  UpdaterParseTests.cpp  UpdaterRobustnessTests.cpp  vw-update.Tests.ps1  vw-update.test.sh
